# news-archiver

./: .gitignore  LICENSE  README.md  newspapers.txt  pyproject.toml  requirements.txt
.github/workflows/: daily-archive.yml
code/: news_archiver.py  setup_chrome_and_driver_mac.py
test/: test_news_archiver.py
